# runp

./: .gitignore  LICENSE.txt  Makefile  README.md  add_to_bashrc.txt  runp-bin
scripts/: runp.sh
src/: config.hpp  main.cpp
tests/: CMakeLists.txt  bashrc_test.sh  script_test.sh  unit_test
